system general update

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,600,700");
+
 @font-face {
     font-family: 'simple-Line-Icons';
     src: url("../fonts/simple-Line-Icons.eot");
@@ -6,6 +7,7 @@
     font-weight: normal;
     font-style: normal
 }
+
 @font-face {
     font-family: 'montserrat';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -13,6 +15,7 @@
     font-weight: normal;
     font-style: normal
 }
+
 @font-face {
     font-family: 'montserrat';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -20,6 +23,7 @@
     font-weight: 600;
     font-style: normal
 }
+
 @font-face {
     font-family: 'montserrat';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -27,6 +31,7 @@
     font-weight: bold;
     font-style: normal
 }
+
 @font-face {
     font-family: 'montserrat_alt';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -34,6 +39,7 @@
     font-weight: normal;
     font-style: normal
 }
+
 @font-face {
     font-family: 'montserrat_alt';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -41,6 +47,7 @@
     font-weight: 600;
     font-style: normal
 }
+
 @font-face {
     font-family: 'montserrat_alt';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -48,6 +55,7 @@
     font-weight: bold;
     font-style: normal
 }
+
 @font-face {
     font-family: 'mukta';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -55,6 +63,7 @@
     font-weight: normal;
     font-style: normal
 }
+
 @font-face {
     font-family: 'mukta';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -62,6 +71,7 @@
     font-weight: 600;
     font-style: normal
 }
+
 @font-face {
     font-family: 'mukta';
     /*src: url("../fonts/static/Montserrat-Medium.ttf") format("truetype");*/
@@ -83,10 +93,10 @@
     font-size: 17px
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
-
+    --icon-size: 1rem;
     /*    
         0DCAF0 -- Cyan
         00EFC8 -- Turquoise
@@ -106,92 +116,124 @@
     --color-light: #fff;
     --color-border: #aaa;
     --color-text-light: #6c757d;
-
 }
-*:not(i){
+
+*:not(i) {
     font-family: 'montserrat_alt';
 }
+
+.container-fluid {
+    flex-grow: 1;
+}
+
 .breadcrumb-item,
 .navbar *:not(i),
-.sidebar *:not(i){
+.sidebar *:not(i) {
     /* font-family: 'mukta';
     letter-spacing: 1px; */
     font-family: 'montserrat';
 }
-.breadcrumb-item a{
+
+.breadcrumb-item a {
     color: var(--color-primary)
 }
-th{
-    font-weight: 600!important;
+
+th {
+    font-weight: 600 !important;
 }
-h5{
+
+h5 {
     color: var(--color-secondary);
     margin-bottom: 1rem;
     letter-spacing: 1px
 }
-.alert{
+
+.alert {
     position: fixed;
     top: 2rem;
     right: 2rem;
     z-index: 999999;
 }
-.logo{
+
+.logo {
     /* background: #fff;
     padding: 0.4rem; */
     margin-left: 7px;
     margin-bottom: 3px;
     border-radius: 3rem;
 }
-.iconColor{
-    color: var(--color-secondary)!important;
+
+.iconColor {
+    color: var(--color-secondary) !important;
 }
-#main-menu > li > a, #main-menu li a span {
-    transition: .08s!important
+
+.navIcon {
+    width: var(--icon-size);
+    height: var(--icon-size);
+    margin-right: .5rem;
+    margin-top: .15rem;
 }
-#main-menu > li > a span{
+
+#main-menu>li>a,
+#main-menu li a span {
+    transition: .08s !important
+}
+
+#main-menu>li>a span {
     color: var(--color-text-light);
 }
-#main-menu > li > a {
+
+#main-menu>li>a {
     border: 1px solid transparent;
     border-radius: 4px;
 }
-#main-menu > li:not(.active) > a:hover{
+
+#main-menu>li:not(.active)>a:hover {
     border-left: 4px solid var(--color-secondary);
 }
-#main-menu > li.active > a{
+
+#main-menu>li.active>a {
     background: var(--color-tertiary);
     border-left: 5px solid var(--color-secondary);
     border-radius: 8px;
 }
+
 #main-menu li.active a i,
 #main-menu li a:hover span,
-#main-menu li.active a span{
-    color: var(--color-light)!important;
+#main-menu li.active a span {
+    color: var(--color-light) !important;
 }
-.navbar-brand{
-    background: var(--color-dark)!important;
+
+.navbar-brand {
+    background: var(--color-dark) !important;
     border-bottom: 1px solid var(--color-secondary-o);
-    box-shadow: 0rem 0rem 1rem rgba(0 0 0 / 25%)!important;
+    box-shadow: 0rem 0rem 1rem rgba(0 0 0 / 25%) !important;
 }
-.navbar-fixed-top{
-    background: #fff!important;
-    box-shadow: 0rem 0rem .7rem rgba(0 0 0 / 15%)!important;
+
+.navbar-fixed-top {
+    background: #fff !important;
+    box-shadow: 0rem 0rem .7rem rgba(0 0 0 / 15%) !important;
 }
-.slimScrollDiv, .sidebar-scroll{
-    overflow: inherit!important;
+
+.slimScrollDiv,
+.sidebar-scroll {
+    overflow: inherit !important;
 }
-.middle{
-    position: relative!important;
+
+.middle {
+    position: relative !important;
 }
-body:not(.menu-icon) #subNavMenuUsuario{
-    box-shadow: 0.2rem 0.2rem 0.3rem rgba(0 0 0 / 50%)!important;
-    background: var(--color-dark)!important;
+
+body:not(.menu-icon) #subNavMenuUsuario {
+    box-shadow: 0.2rem 0.2rem 0.3rem rgba(0 0 0 / 50%) !important;
+    background: var(--color-dark) !important;
     position: absolute !important;
     z-index: 9999999 !important;
     right: -13rem !important;
     border-radius: 6px;
     width: 90%;
 }
+
 .fixed-bottom {
     position: absolute;
     bottom: 1rem;
@@ -200,54 +242,132 @@ body:not(.menu-icon) #subNavMenuUsuario{
     color: var(--btn-primary);
 }
 
-.space-1{
+.space-1 {
     letter-spacing: 1px;
 }
-.space-2{
+
+.space-2 {
     letter-spacing: 2px;
 }
-.text-primary{
-    color: var(--color-primary)!important;
+
+.text-primary {
+    color: var(--color-primary) !important;
 }
-.bg-primary{
-    background: var(--color-primary)!important;
+
+.bg-primary {
+    background: var(--color-primary) !important;
 }
-.btn-primary{
+
+.btn-primary {
     background: var(--color-primary);
     letter-spacing: 1px;
     border-color: var(--color-primary);
     margin-top: 1.5rem;
 }
-.alert-success{
+
+.alert-success {
     color: var(--color-light);
     border-color: var(--color-success);
     background: var(--color-success);
 }
-.alert-danger{
+
+.alert-danger {
     color: var(--color-light);
     border-color: var(--color-danger);
     background: var(--color-danger);
 }
-.alert-warning{
+
+.alert-warning {
     color: var(--color-dark);
     border-color: var(--color-warning);
     background: var(--color-warning);
 }
-.alert-info{
+
+.alert-info {
     color: var(--color-light);
     border-color: var(--color-info);
     background: var(--color-info);
 }
 
-div.dataTables_wrapper .form-control{
+div.dataTables_wrapper .form-control {
     border: 1px solid #ccc;
     color: #777;
 }
-.dataTables_length *{
-    border-top-right-radius: 0!important;
-    border-bottom-right-radius: 0!important;
+
+.dataTables_length * {
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
 }
 
+@media (max-width:991px) {
+    #bottomSection {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+}
+
+/*NAVTOP CSS*/
+.name {
+    font-family: 'montserrat_alt' !important;
+}
+
+.drop-list ul li:hover {
+    padding: 0 .7rem;
+    border-left: 3px solid var(--color-primary);
+}
+
+.drop-list ul li {
+    border-radius: 4px;
+    border-left: 3px solid transparent;
+    margin-bottom: .3rem;
+    transition: .3s;
+}
+
+.drop-list ul li a {
+    transition: .3s;
+    padding: .3rem;
+}
+
+.powerIcon {
+    margin-right: 0.2rem;
+    margin-bottom: 0.1rem;
+    width: .9rem;
+    height: .9rem;
+}
+
+#logoff {
+    margin-top: .6rem;
+}
+
+#logoff,
+#logoff a {
+    border-left: none;
+    transition: .3s;
+}
+
+#logoff a {
+    color: var(--color-danger);
+    border-radius: 4px;
+    border: 1px solid red;
+}
+
+#logoff:hover {
+    padding: 0 !important;
+}
+
+#logoff:hover a {
+    padding: .3rem !important;
+    color: var(--color-light);
+    background: var(--color-danger)
+}
+
+.navbar-nav .user-profile .drop-list li a {
+    padding: 0.3rem !important;
+    border-radius: 4px;
+}
+
+/*NAVTOP CSS END*/
 
 .icon-user-female,
 .icon-user-follow,
@@ -2146,6 +2266,7 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         width: 0
     }
+
     100% {
         width: 100%
     }
@@ -2155,6 +2276,7 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         left: -10%
     }
+
     100% {
         left: 100%
     }
@@ -2176,11 +2298,13 @@ body.waitMe_body .waitMe_container.text>div {
 }
 
 @keyframes bounce {
+
     0%,
     80%,
     100% {
         transform: scale(0)
     }
+
     40% {
         transform: scale(1)
     }
@@ -2197,9 +2321,11 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         transform: perspective(120px)
     }
+
     50% {
         transform: perspective(120px) rotateY(180deg)
     }
+
     100% {
         transform: perspective(120px) rotateY(180deg) rotateX(180deg)
     }
@@ -2233,11 +2359,13 @@ body.waitMe_body .waitMe_container.text>div {
 }
 
 @keyframes stretch {
+
     0%,
     40%,
     100% {
         transform: scaleY(0.4)
     }
+
     20% {
         transform: scaleY(1)
     }
@@ -2282,16 +2410,19 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         transform: rotate(0deg)
     }
+
     100% {
         transform: rotate(360deg)
     }
 }
 
 @keyframes orbit {
+
     0%,
     100% {
         transform: scale(0)
     }
+
     50% {
         transform: scale(1)
     }
@@ -2424,11 +2555,13 @@ body.waitMe_body .waitMe_container.text>div {
 }
 
 @keyframes roundBounce {
+
     0%,
     80%,
     100% {
         transform: scale(0)
     }
+
     40% {
         transform: scale(1)
     }
@@ -2480,32 +2613,39 @@ body.waitMe_body .waitMe_container.text>div {
         transform: rotate(225deg);
         animation-timing-function: ease-out
     }
+
     7% {
         opacity: 1;
         transform: rotate(345deg);
         animation-timing-function: linear
     }
+
     30% {
         transform: rotate(455deg);
         animation-timing-function: ease-in-out
     }
+
     39% {
         transform: rotate(690deg);
         animation-timing-function: linear
     }
+
     70% {
         opacity: 1;
         transform: rotate(815deg);
         animation-timing-function: ease-out
     }
+
     75% {
         transform: rotate(945deg);
         animation-timing-function: ease-out
     }
+
     76% {
         opacity: 0;
         transform: rotate(945deg)
     }
+
     100% {
         opacity: 0;
         transform: rotate(945deg)
@@ -2550,21 +2690,25 @@ body.waitMe_body .waitMe_container.text>div {
 }
 
 @keyframes win8_linear {
+
     0%,
     100% {
         transform: translateX(0);
         animation-timing-function: ease-out
     }
+
     10% {
         opacity: 1;
         transform: translateX(33.333%);
         animation-timing-function: linear
     }
+
     50% {
         opacity: 1;
         transform: translateX(53.333%);
         animation-timing-function: ease-in-out
     }
+
     60% {
         opacity: 0;
         transform: translateX(86.666%)
@@ -2653,6 +2797,7 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         opacity: 1
     }
+
     100% {
         opacity: .25
     }
@@ -2692,10 +2837,12 @@ body.waitMe_body .waitMe_container.text>div {
         transform: scaleY(0.7);
         opacity: .1
     }
+
     50% {
         transform: scaleY(1);
         opacity: 1
     }
+
     100% {
         transform: scaleY(0.7);
         opacity: .1
@@ -2719,6 +2866,7 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         transform: rotate(0deg)
     }
+
     100% {
         transform: rotate(360deg)
     }
@@ -2759,6 +2907,7 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         transform: rotate(0deg)
     }
+
     100% {
         transform: rotate(360deg)
     }
@@ -2790,9 +2939,11 @@ body.waitMe_body .waitMe_container.text>div {
         transform: scale(0.1);
         opacity: 0
     }
+
     50% {
         opacity: 1
     }
+
     100% {
         transform: scale(1.2);
         opacity: 0
@@ -2825,6 +2976,7 @@ body.waitMe_body .waitMe_container.text>div {
     0% {
         background-position: 0 0
     }
+
     100% {
         background-position: 50px 50px
     }
@@ -2850,11 +3002,13 @@ body.waitMe_body .waitMe_container.text>div {
 }
 
 @keyframes bouncePulse {
+
     0%,
     80%,
     100% {
         transform: scale(0.5)
     }
+
     40% {
         transform: scale(1)
     }
@@ -3352,8 +3506,10 @@ footer {
     width: calc(100% - 220px);
     float: right;
     position: relative;
-    margin-top: 65px;
-    padding: 0 10px
+    padding: 65px 10px 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 1200px) {
@@ -3778,6 +3934,7 @@ html.fullscreen-bg #wrapper {
 }
 
 @media screen and (max-width: 767px) {
+
     .navbar-nav .icon-menu.mega_menu,
     .navbar-nav .icon-menu.create_new {
         display: none
@@ -3982,18 +4139,22 @@ html.fullscreen-bg #wrapper {
     .navbar-nav {
         margin-right: 0
     }
+
     .navbar-nav>li {
         display: table-cell;
         position: inherit;
         text-align: center
     }
+
     .navbar-nav .dropdown-menu {
         max-height: 400px;
         overflow: auto
     }
+
     .navbar-nav .dropdown-menu>li>a {
         white-space: normal
     }
+
     .navbar-nav .open .dropdown-menu {
         -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.05);
         -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.05);
@@ -4002,15 +4163,18 @@ html.fullscreen-bg #wrapper {
         width: 100%;
         background: #fff
     }
+
     .navbar-nav .open .dropdown-menu>li>a {
         padding: 3px 20px
     }
+
     .navbar-nav .open .dropdown-menu.notifications>li>a {
         padding: 12px 15px
     }
 }
 
 @media screen and (max-width: 768px) {
+
     .navbar>.container .navbar-brand,
     .navbar>.container-fluid .navbar-brand {
         margin-left: 0;
@@ -4212,20 +4376,23 @@ html.fullscreen-bg #wrapper {
     position: relative;
     text-overflow: ellipsis;
     white-space: nowrap;
-    background-color: rgba(204, 204, 204,0.15);
+    background-color: rgba(204, 204, 204, 0.15);
     border-left: 4px solid transparent;
 }
 
 .sidebar .metismenu ul a:hover {
-    border-left-color: var(--color-secondary)!important;
+    border-left-color: var(--color-secondary) !important;
     padding-left: 24px
 }
+
 .sidebar .metismenu ul li:first-child a {
     border-top-left-radius: 6px;
 }
+
 .sidebar .metismenu ul li:last-child a {
     border-bottom-left-radius: 6px;
 }
+
 /*body:not(.menu-icon) .sidebar .metismenu ul a::before {
     background-color: #777;
     content: '';
@@ -4326,7 +4493,7 @@ html.fullscreen-bg #wrapper {
     border-top: 1px solid rgba(0, 0, 0, 0.3)
 }
 
-body.menu-icon .list-unstyled{
+body.menu-icon .list-unstyled {
     padding-left: 10px;
 }
 
@@ -4391,32 +4558,38 @@ body.menu-icon .list-unstyled{
 .menu-icon .sidebar .metismenu li.heading {
     display: none
 }
+
 .menu-icon .sidebar .metismenu li.top ul {
     bottom: 0;
     top: auto
 }
 
-.menu-icon .sidebar .metismenu li.middle ul li{
-    background: #212529!important;
+.menu-icon .sidebar .metismenu li.middle ul li {
+    background: #212529 !important;
 }
+
 .menu-icon .sidebar .metismenu li ul li:first-child a,
-.menu-icon .sidebar .metismenu li.middle ul li:first-child{
+.menu-icon .sidebar .metismenu li.middle ul li:first-child {
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
 }
+
 .menu-icon .sidebar .metismenu li ul li:last-child a,
-.menu-icon .sidebar .metismenu li.middle ul li:last-child{
+.menu-icon .sidebar .metismenu li.middle ul li:last-child {
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
 }
-.menu-icon .sidebar .metismenu li.middle ul li a{
-    background: transparent!important;
+
+.menu-icon .sidebar .metismenu li.middle ul li a {
+    background: transparent !important;
 }
+
 .menu-icon .sidebar .metismenu li ul li a:hover {
     border-left-color: #0dcaf0;
     padding-left: 1.5rem;
 }
-.menu-icon .sidebar .metismenu li ul li a{
+
+.menu-icon .sidebar .metismenu li ul li a {
     border-left: 4px solid transparent;
     position: relative;
     padding-left: 1rem;
@@ -4425,7 +4598,7 @@ body.menu-icon .list-unstyled{
 
 .menu-icon .sidebar.ps,
 .menu-icon .sidebar .slimScrollDiv,
-.menu-icon .sidebar .slimScrollDiv .sidebar-scroll{
+.menu-icon .sidebar .slimScrollDiv .sidebar-scroll {
     overflow: visible !important
 }
 
@@ -9127,14 +9300,17 @@ ul.list-justify.large-number span {
         width: 100%;
         margin-bottom: 2px
     }
+
     .wizard>.steps a {
         margin: 0
     }
+
     .wizard.wizard.vertical>.content,
     .wizard.wizard.vertical>.steps {
         width: 100%;
         padding: 0
     }
+
     .wizard_validation .wizard .steps>ul>li {
         width: 100% !important
     }
@@ -10317,6 +10493,7 @@ ul.list-justify.large-number span {
     .w_profile {
         text-align: center
     }
+
     .w_profile .profile-image {
         margin-bottom: 20px
     }
@@ -10784,10 +10961,12 @@ ul.list-justify.large-number span {
     .fc-toolbar .fc-right {
         display: none
     }
+
     .fc-toolbar .fc-left {
         width: 100%;
         margin-bottom: 15px
     }
+
     .fc .fc-toolbar .fc-today-button {
         float: right
     }
@@ -10860,6 +11039,7 @@ ul.list-justify.large-number span {
         padding-left: 0;
         padding-right: 0
     }
+
     .file_manager .nav-tabs .nav-item {
         display: inline-block
     }
