--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -16,6 +16,7 @@ body{
     background-color: #f1f5f7;
     height: 100vh
 }
+.areaSignup,
 .areaLogin{
     height: 100%;
     display: flex;
@@ -101,6 +102,7 @@ body{
     box-shadow: 0 0 2px 2px rgba(0 0 0 / 15%)!important;
 
 }
+.bottomInfo a:focus,
 .bottomInfo a{
     margin-top: 1rem;
     display: block;
@@ -108,7 +110,9 @@ body{
     border-radius: 12px;
     transition: .3s;
     border-bottom: 1px solid transparent;
+    outline: none!important;
 }
+.bottomInfo a:focus,
 .bottomInfo a:hover{
     padding: 0 .8rem;
     border-bottom: 1px solid var(--color-primary);
@@ -143,6 +147,11 @@ img {
     min-width: 10rem;
     max-width: 12rem;
 }
+#footer{
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
 
 @media (max-width: 380px){
     .cardRight h4{
@@ -154,6 +163,18 @@ img {
     .cardLeft h4{
         font-size: 1.5rem;
     }
+    .areaSignup .imageArea{
+        min-width: 5rem!important;
+        max-width: 5rem!important;
+    } 
+    .areaSignup .cardLeft{
+        flex-direction: unset!important;
+        justify-content: space-around;
+    }
+    #footer{
+        top: 10px;
+        bottom: 0;
+    }
 }
 @media (min-width: 1440px){
     .loginCard{
@@ -163,6 +184,7 @@ img {
         padding-left: 15px!important;
         padding-right: 15px!important;
     }
+    
 }
 @media (min-width: 768px) and (max-width: 1439px){
     .loginCard{
